--- a/wp-content/themes/yfennimap/style.css
+++ b/wp-content/themes/yfennimap/style.css
@@ -424,7 +424,7 @@ Accessibility
   z-index: 100000;
   /* Above WP toolbar */ }
 
-/* line 10, scss/_header.scss */
+/* line 9, scss/_header.scss */
 .site-header {
   background: black;
   position: absolute;
@@ -433,31 +433,30 @@ Accessibility
   left: 0;
   height: 3.1em;
   z-index: 10; }
-  /* line 18, scss/_header.scss */
+  /* line 17, scss/_header.scss */
   .site-header a {
     color: white;
     text-decoration: none; }
 
-/* line 24, scss/_header.scss */
+/* line 23, scss/_header.scss */
 #site-branding {
   padding: 1em 0;
   float: left; }
-  /* line 27, scss/_header.scss */
+  /* line 26, scss/_header.scss */
   #site-branding h1 {
     display: inline;
     font-size: 1rem;
     line-height: 1;
     font-weight: normal;
-    background-color: black;
     padding: 1em;
     margin: 0;
     background: transparent; }
 
-/* line 34, scss/_header.scss */
+/* line 33, scss/_header.scss */
 #site-navigation {
   float: right;
   padding: 1em 0; }
-  /* line 37, scss/_header.scss */
+  /* line 36, scss/_header.scss */
   #site-navigation .menu ul {
     margin: 0;
     padding: 0;
@@ -476,62 +475,50 @@ Accessibility
       zoom: 1;
       *display: inline;
       white-space: nowrap; }
-    /* line 39, scss/_header.scss */
+    /* line 38, scss/_header.scss */
     #site-navigation .menu ul a {
       font-size: 1rem;
       line-height: 1;
       font-weight: normal;
-      background-color: black;
       padding: 1em;
       margin: 0; }
 
-/* line 45, scss/_header.scss */
+/* line 44, scss/_header.scss */
 .avatar-wrapper {
   float: right;
   padding: 1em 0;
   margin: 0; }
-  /* line 49, scss/_header.scss */
+  /* line 48, scss/_header.scss */
   .avatar-wrapper a {
     font-size: 1rem;
     line-height: 1;
     font-weight: normal;
-    background-color: black;
     padding: 1em;
     margin: 0; }
-  /* line 52, scss/_header.scss */
+  /* line 51, scss/_header.scss */
   .avatar-wrapper .avatar {
     height: 3em;
     width: 3em;
     margin: -1em 0;
     cursor: pointer; }
-    /* line 57, scss/_header.scss */
+    /* line 56, scss/_header.scss */
     .avatar-wrapper .avatar img {
       display: block;
       margin: 0; }
-  /* line 62, scss/_header.scss */
-  .avatar-wrapper .avatar-menu {
-    position: absolute;
-    top: 3em;
-    display: none; }
 
-/* line 69, scss/_header.scss */
-.avatar-wrapper .avatar-menu {
+/* line 63, scss/_header.scss */
+.avatar-menu {
   font-size: 1rem;
   line-height: 1;
   font-weight: normal;
-  background-color: black;
   padding: 1em;
   margin: 0;
   position: absolute;
   right: 3em;
   top: 0;
-  display: none;
   -webkit-transition: 0.2s;
-  transition: 0.2s; }
-
-/* line 78, scss/_header.scss */
-.avatar-wrapper:focus > .avatar-menu {
-  display: block; }
+  transition: 0.2s;
+  white-space: nowrap; }
 
 /*--------------------------------------------------------------
 Navigation
